Fixed spacing in navbar

--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@ margin:0;
 }
 
 header{
+margin: 15px;
 text-align: center;
 display: flex;
 justify-content: space-between;
